tests/expected/err-funass3.uc.out
/home/krikava/Teaching/FIT/NI-APR/2022/microc/tests/../examples/err-funass3.uc:[10:7]: error: cannot assign to a function
      f = g; // error: assignment to a function
        ^

1
